...
    <string name="title_matches">Matches</string>
    <string name="title_teams">Teams</string>
    <string name="title_favorites">Favorites</string>
    <string name="matches">Matches</string>
    <string name="title_image">image</string>
    <string name="Overview">Overview</string>
    <string name="players">Players</string>


    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <string-array name="club_name">
        <item>Real Madrid FC</item>
        <item>Barcelona FC</item>
        <item>Bayern Munchen FC</item>
        <item>Manchester City FC</item>
...
